# 2024-fast-api-async

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
api/: converter.py  main.py  routes.py  schemas.py
docs/: index.md
docs/1. Preparação de Ambiente/: README.md
docs/2. Conceitos introdutórios/: Coroutines.md  Getenv.md  Params.md  Pydantic.md  Typehint.md  aiohttp.md
docs/3. Projeto/: Routes.md  Schemas.md
site/: 404.html  index.html  objects.inv
site/1. Preparação de Ambiente/: index.html
site/2. Conceitos introdutórios/: async_await_sponge_bob.py
site/2. Conceitos introdutórios/Coroutines/: index.html
site/2. Conceitos introdutórios/Getenv/: index.html
site/2. Conceitos introdutórios/Params/: index.html
site/2. Conceitos introdutórios/Pydantic/: index.html
site/2. Conceitos introdutórios/Typehint/: index.html
site/2. Conceitos introdutórios/aiohttp/: index.html
site/3. Projeto/Conversor/: index.html
site/3. Projeto/Routes/: index.html
site/3. Projeto/Schemas/: index.html
